<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Order A - Z -->

    <!-- App-->
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_name">Webbapp</string>
    <string name="bad_url">Url broken</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="no_internet">No internet</string>
    <string name="no_data">No data from server</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- Navigation Drawer-->
    <string name="nav_sec1">Tasks</string>
    <string name="nav_sec2">Activities</string>
    <string name="nav_sec3">Profile</string>
    <string name="navigation_drawer_close" translatable="false">Drawer closed</string>
    <string name="navigation_drawer_open" translatable="false">Drawer opened</string>
    <string name="opc_new">Add</string>
    <string name="opc_view">View</string>
    <string name="opc_edit">Edit</string>

</resources>